Fixed footer in center for mobile and desktop, and cropped images for portfolio. -PTE

--- a/css/custom.css
+++ b/css/custom.css
@@ -40,6 +40,24 @@ h1.intro-text {
     object-position: 50% 50%;
 }
 
+.portfo_col .content img {
+  width:100%;
+  height: 340px;
+  object-fit:cover;
+}
+
+
+.portfo_col header {
+  height: 32px;
+  overflow: visible;
+  z-index: 100;
+  position: relative;
+}
+
+.portfo_col header h3 {
+  background-color:white;
+}
+
 h2 {
   font-family: 'Source Serif Pro', serif;
   margin-bottom:1em;
@@ -67,6 +85,11 @@ body {
   .home_col > .card, .portfo_col > .card {
     height:100%;
   }
+  .portfo_col .content img {
+    height: 240px;
+    object-fit: cover;
+  }
+  
 }
 
 .home_col .card h3 {
@@ -89,5 +112,7 @@ footer .container {
 
 footer .container p {
   padding:1em;
+  display:block;
+  text-align:center;
 }
 
